refactor:코치의 못먹는 음식 정보 입력 수정